# HelloNDK

FFmpegAndroidDecoder/app/: CMakeLists.txt  build.gradle
FFmpegAndroidDecoder/app/src/androidTest/java/com/example/hh/ffmpegandroiddecoder/: ExampleInstrumentedTest.java
FFmpegAndroidDecoder/app/src/main/: AndroidManifest.xml
FFmpegAndroidDecoder/app/src/main/cpp/: native-lib.cpp
FFmpegAndroidDecoder/app/src/main/java/com/example/hh/ffmpegandroiddecoder/: MainActivity.java
FFmpegAndroidDecoder/app/src/main/res/layout/: activity_main.xml
FFmpegAndroidDecoder/app/src/test/java/com/example/hh/ffmpegandroiddecoder/: ExampleUnitTest.java
FFmpegAndroidDecoder/gradle/wrapper/: gradle-wrapper.properties
HelloJNI/app/: CMakeLists.txt  build.gradle
HelloJNI/app/src/androidTest/java/com/example/hh/hellojni/: ExampleInstrumentedTest.java
HelloJNI/app/src/main/: AndroidManifest.xml
HelloJNI/app/src/main/cpp/: native-lib.cpp
HelloJNI/app/src/main/java/com/example/hh/hellojni/: MainActivity.java
HelloJNI/app/src/main/res/layout/: activity_main.xml
HelloJNI/app/src/test/java/com/example/hh/hellojni/: ExampleUnitTest.java
HelloJNI/gradle/wrapper/: gradle-wrapper.properties
